--- a/Tennis_Analytics.ipynb
+++ b/Tennis_Analytics.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1441,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1776,7 +1776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1814,7 +1814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1866,7 +1866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1925,7 +1925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1952,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2096,7 +2096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2133,7 +2133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2154,7 +2154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2175,7 +2175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2258,7 +2258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2343,7 +2343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2361,7 +2361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2390,7 +2390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2513,15 +2513,15 @@
     "                                          \"second_serve_t_won_%\",\n",
     "                                            \"second_serve_t_rally_length_mean\",\n",
     "                                         \"break_point_count\",\n",
-    "                                          \"break_points_won_%\",\n",
+    "                                          \"break_point_won_%\",\n",
     "                                         \"game_point_count\",\n",
-    "                                         \"game_points_won_%\",\n",
+    "                                         \"game_point_won_%\",\n",
     "                                         \"set_point_count\",\n",
-    "                                         \"set_points_won_%\",\n",
+    "                                         \"set_point_won_%\",\n",
     "                                         \"match_point_count\",\n",
-    "                                         \"match_points_won_%\",\n",
+    "                                         \"match_point_won_%\",\n",
     "                                         \"setup_point_count\",\n",
-    "                                         \"setup_points_won_%\",\n",
+    "                                         \"setup_point_won_%\",\n",
     "                                            \"critical_points_won_%\",\n",
     "                                            \"deuce_point_count\",\n",
     "                                            \"deuce_point_won_%\",\n",
@@ -2699,16 +2699,31 @@
     "        stats.loc[index, \"second_serve_t_rally_length_mean\"] = second_serve_t_points[\"rallyLen\"].mean()\n",
     "\n",
     "        # Critical point stats\n",
-    "        critical_point_col = pd.concat([server_points[\"server_critical_point\"], \n",
-    "                                        returner_points[\"returner_critical_point\"]])  \n",
-    "        server_points\n",
-    "        stats.loc[index, \"break_point_count\"] = critical_point_col.str.contains(\"break_point\").value_counts()[True]\n",
-    "#         stats.loc[index, \"game_point_count\"] = critical_point_col.str.contains(\"game_point\").value_counts()[True]\n",
-    "#         stats.loc[index, \"set_point_count\"] = critical_point_col.str.contains(\"set_point\").value_counts()[True]\n",
-    "#         stats.loc[index, \"match_point_count\"] = critical_point_col.str.contains(\"match_point\").value_counts()[True]\n",
-    "#         stats.loc[index, \"setup_point_count\"] = critical_point_col.str.contains(\"setup_point\").value_counts()[True]\n",
-    "#         stats.loc[index, \"deuce_point_count\"] = critical_point_col.str.contains(\"deuce_point\").value_counts()[True]\n",
     "        \n",
+    "        keywords = [\"break_point\", \"game_point\", \"set_point\", \n",
+    "                    \"match_point\", \"setup_point\", \"deuce_point\"]\n",
+    "        \n",
+    "        for keyword in keywords:\n",
+    "            critical_point_count = \\\n",
+    "                (server_points.loc[server_points[\"server_critical_point\"].str.contains(keyword, na=False),\n",
+    "                                  \"server_critical_point\"].count() +\n",
+    "                 returner_points.loc[returner_points[\"returner_critical_point\"].str.contains(keyword, na=False),\n",
+    "                                  \"returner_critical_point\"].count()) \n",
+    "\n",
+    "            stats.loc[index, keyword+\"_count\"] = critical_point_count\n",
+    "            \n",
+    "            critical_point_won = (server_points.loc[(server_points[\"server_critical_point\"].str.contains(keyword, na=False) &\n",
+    "                                                    (server_points[\"point_winner_name\"] == player)),\n",
+    "                                           \"point_winner_name\"].count() +\n",
+    "                                  returner_points.loc[(returner_points[\"returner_critical_point\"].str.contains(keyword, na=False)),\n",
+    "                                              \"point_winner_name\"].count())\n",
+    "            \n",
+    "            # Avoid divide by 0 error\n",
+    "            print(critical_point_won)\n",
+    "            stats.loc[index, keyword+\"_won_%\"] = ((critical_point_won / critical_point_count) \n",
+    "                                                  if (critical_point_count > 0) else 0)\n",
+    "    \n",
+    "    # You cannot use round() if there are non-numerical values in the dataframe.\n",
     "    stats.loc[:, stats.columns != \"player_name\"] = stats.loc[:, stats.columns != \"player_name\"].astype(float).round(decimals=3)\n",
     "    return stats\n"
    ]
@@ -3576,7 +3591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3591,7 +3606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3601,7 +3616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -3610,7 +3625,7 @@
        "550"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3623,27 +3638,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "roger_federer         447\n",
-       "novak_djokovic        275\n",
-       "rafael_nadal          267\n",
-       "andy_murray           153\n",
-       "stefan_edberg         130\n",
-       "                     ... \n",
-       "constant_lestienne      1\n",
-       "mate_delic              1\n",
-       "leander_paes            1\n",
-       "chris_guccione          1\n",
-       "sergey_fomin            1\n",
+       "roger_federer      447\n",
+       "novak_djokovic     275\n",
+       "rafael_nadal       267\n",
+       "andy_murray        153\n",
+       "stefan_edberg      130\n",
+       "                  ... \n",
+       "brad_gilbert         1\n",
+       "quentin_halys        1\n",
+       "chase_buchanan       1\n",
+       "roman_safiullin      1\n",
+       "joao_souza           1\n",
        "Length: 550, dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4336,7 +4351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4362,7 +4377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4377,7 +4392,7 @@
     "# 20150712-M-Wimbledon-F-Roger_Federer-Novak_Djokovic\n",
     "# 20080606-M-Roland_Garros-SF-Novak_Djokovic-Rafael_Nadal\n",
     "# 20070610-M-Roland_Garros-F-Roger_Federer-Rafael_Nadal\n",
-    "match_id = \"20080706-M-Wimbledon-F-Roger_Federer-Rafael_Nadal\"\n",
+    "match_id = \"20160128-M-Australian_Open-SF-Novak_Djokovic-Roger_Federer\"\n",
     "\n",
     "points_in_match, list_sets, list_games = get_points_in_one_match(my_points, match_id)\n",
     "\n",
@@ -4387,14 +4402,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "34\n"
+      "78\n"
      ]
     }
    ],
@@ -4404,14 +4419,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-24\n"
+      "-17\n"
      ]
     }
    ],
@@ -4421,14 +4436,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1251,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n"
+      "28\n"
      ]
     }
    ],
@@ -4469,7 +4484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -4493,9 +4508,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>novak_djokovic_set</th>\n",
+       "      <th>roger_federer_set</th>\n",
        "      <th>rafael_nadal_set</th>\n",
-       "      <th>novak_djokovic_game</th>\n",
+       "      <th>roger_federer_game</th>\n",
        "      <th>rafael_nadal_game</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -4511,33 +4526,51 @@
        "      <th>1</th>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>4</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    novak_djokovic_set   rafael_nadal_set   novak_djokovic_game  \\\n",
-       "0                    0                  1                     4   \n",
-       "1                    0                  2                     2   \n",
-       "2                    0                  3                     6   \n",
+       "    roger_federer_set   rafael_nadal_set   roger_federer_game  \\\n",
+       "0                   0                  1                    4   \n",
+       "1                   0                  2                    4   \n",
+       "2                   1                  2                    7   \n",
+       "3                   2                  2                    7   \n",
+       "4                   2                  3                    7   \n",
        "\n",
        "    rafael_nadal_game  \n",
        "0                   6  \n",
        "1                   6  \n",
-       "2                   7  "
+       "2                   6  \n",
+       "3                   6  \n",
+       "4                   9  "
       ]
      },
-     "execution_count": 178,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4548,9 +4581,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 122,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "16\n",
+      "5\n",
+      "1\n",
+      "35\n",
+      "10\n",
+      "4\n",
+      "11\n",
+      "1\n",
+      "0\n",
+      "13\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "stats = get_stats(points_in_match)\n",
     "\n",
@@ -6227,7 +6279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
