--- a/Tennis_Analytics.ipynb
+++ b/Tennis_Analytics.ipynb
@@ -2390,7 +2390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2701,27 +2701,43 @@
     "        # Critical point stats\n",
     "        \n",
     "        keywords = [\"break_point\", \"game_point\", \"set_point\", \n",
-    "                    \"match_point\", \"setup_point\", \"deuce_point\"]\n",
+    "                    \"match_point\", \"setup_point\", \"tb_setup_point\",\n",
+    "                    \"deuce_point\"]\n",
     "        \n",
+    "        # How to differentiate between tiebreak_point and break_point\n",
+    "        print(player)\n",
     "        for keyword in keywords:\n",
-    "            critical_point_count = \\\n",
-    "                (server_points.loc[server_points[\"server_critical_point\"].str.contains(keyword, na=False),\n",
-    "                                  \"server_critical_point\"].count() +\n",
-    "                 returner_points.loc[returner_points[\"returner_critical_point\"].str.contains(keyword, na=False),\n",
-    "                                  \"returner_critical_point\"].count()) \n",
-    "\n",
-    "            stats.loc[index, keyword+\"_count\"] = critical_point_count\n",
+    "            print(keyword)\n",
+    "            server_critical_points = \\\n",
+    "                server_points.loc[server_points[\"server_critical_point\"].str.contains(keyword, na=False)]\n",
+    "            print(\"server critical point count\")\n",
+    "            print(server_critical_points[\"server_critical_point\"].count())\n",
+    "            returner_critical_points = \\\n",
+    "                returner_points.loc[returner_points[\"returner_critical_point\"].str.contains(keyword, na=False)]\n",
+    "            print(\"returner critical point count\")\n",
+    "            print(returner_critical_points[\"returner_critical_point\"].count())\n",
     "            \n",
-    "            critical_point_won = (server_points.loc[(server_points[\"server_critical_point\"].str.contains(keyword, na=False) &\n",
-    "                                                    (server_points[\"point_winner_name\"] == player)),\n",
-    "                                           \"point_winner_name\"].count() +\n",
-    "                                  returner_points.loc[(returner_points[\"returner_critical_point\"].str.contains(keyword, na=False)),\n",
-    "                                              \"point_winner_name\"].count())\n",
+    "            critical_point_count = (server_critical_points[\"server_critical_point\"].count() + \n",
+    "                                    returner_critical_points[\"returner_critical_point\"].count())\n",
+    "            \n",
+    "            stats.loc[index, keyword+\"_count\"] = critical_point_count\n",
+    "\n",
+    "            server_critical_points_won = \\\n",
+    "                server_critical_points.loc[server_critical_points[\"point_winner_name\"] == player]\n",
+    "            returner_critical_points_won = \\\n",
+    "                returner_critical_points.loc[returner_critical_points[\"point_winner_name\"] == player]\n",
+    "            \n",
+    "            server_critical_point_won_count = server_critical_points_won[\"server_critical_point\"].count()\n",
+    "            print(\"server critical point won count\")\n",
+    "            print(server_critical_point_won_count)\n",
+    "            returner_critical_point_won_count = returner_critical_points_won[\"returner_critical_point\"].count()\n",
+    "            print(\"returner critical point won count\")\n",
+    "            print(returner_critical_point_won_count)\n",
+    "            critical_point_won_count = server_critical_point_won_count + returner_critical_point_won_count\n",
     "            \n",
     "            # Avoid divide by 0 error\n",
-    "            print(critical_point_won)\n",
-    "            stats.loc[index, keyword+\"_won_%\"] = ((critical_point_won / critical_point_count) \n",
-    "                                                  if (critical_point_count > 0) else 0)\n",
+    "            stats.loc[index, keyword+\"_won_%\"] = ((critical_point_won_count / critical_point_count) \n",
+    "                                                  if critical_point_count > 0 else 0)\n",
     "    \n",
     "    # You cannot use round() if there are non-numerical values in the dataframe.\n",
     "    stats.loc[:, stats.columns != \"player_name\"] = stats.loc[:, stats.columns != \"player_name\"].astype(float).round(decimals=3)\n",
@@ -4377,7 +4393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4392,7 +4408,7 @@
     "# 20150712-M-Wimbledon-F-Roger_Federer-Novak_Djokovic\n",
     "# 20080606-M-Roland_Garros-SF-Novak_Djokovic-Rafael_Nadal\n",
     "# 20070610-M-Roland_Garros-F-Roger_Federer-Rafael_Nadal\n",
-    "match_id = \"20160128-M-Australian_Open-SF-Novak_Djokovic-Roger_Federer\"\n",
+    "match_id = \"20190714-M-Wimbledon-F-Roger_Federer-Novak_Djokovic\"\n",
     "\n",
     "points_in_match, list_sets, list_games = get_points_in_one_match(my_points, match_id)\n",
     "\n",
@@ -4581,25 +4597,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9\n",
-      "16\n",
-      "5\n",
-      "1\n",
-      "35\n",
-      "10\n",
-      "4\n",
-      "11\n",
-      "1\n",
+      "roger_federer\n",
+      "break_point\n",
+      "server critical point count\n",
       "0\n",
+      "returner critical point count\n",
       "13\n",
-      "10\n"
+      "server critical point won count\n",
+      "0\n",
+      "returner critical point won count\n",
+      "7\n",
+      "game_point\n",
+      "server critical point count\n",
+      "44\n",
+      "returner critical point count\n",
+      "0\n",
+      "server critical point won count\n",
+      "29\n",
+      "returner critical point won count\n",
+      "0\n",
+      "set_point\n",
+      "server critical point count\n",
+      "3\n",
+      "returner critical point count\n",
+      "2\n",
+      "server critical point won count\n",
+      "1\n",
+      "returner critical point won count\n",
+      "1\n",
+      "match_point\n",
+      "server critical point count\n",
+      "2\n",
+      "returner critical point count\n",
+      "0\n",
+      "server critical point won count\n",
+      "0\n",
+      "returner critical point won count\n",
+      "0\n",
+      "setup_point\n",
+      "server critical point count\n",
+      "36\n",
+      "returner critical point count\n",
+      "19\n",
+      "server critical point won count\n",
+      "29\n",
+      "returner critical point won count\n",
+      "8\n",
+      "tb_setup_point\n",
+      "server critical point count\n",
+      "1\n",
+      "returner critical point count\n",
+      "2\n",
+      "server critical point won count\n",
+      "0\n",
+      "returner critical point won count\n",
+      "0\n",
+      "deuce_point\n",
+      "server critical point count\n",
+      "8\n",
+      "returner critical point count\n",
+      "13\n",
+      "server critical point won count\n",
+      "5\n",
+      "returner critical point won count\n",
+      "4\n",
+      "novak_djokovic\n",
+      "break_point\n",
+      "server critical point count\n",
+      "1\n",
+      "returner critical point count\n",
+      "10\n",
+      "server critical point won count\n",
+      "1\n",
+      "returner critical point won count\n",
+      "5\n",
+      "game_point\n",
+      "server critical point count\n",
+      "46\n",
+      "returner critical point count\n",
+      "0\n",
+      "server critical point won count\n",
+      "26\n",
+      "returner critical point won count\n",
+      "0\n",
+      "set_point\n",
+      "server critical point count\n",
+      "1\n",
+      "returner critical point count\n",
+      "2\n",
+      "server critical point won count\n",
+      "1\n",
+      "returner critical point won count\n",
+      "2\n",
+      "match_point\n",
+      "server critical point count\n",
+      "0\n",
+      "returner critical point count\n",
+      "1\n",
+      "server critical point won count\n",
+      "0\n",
+      "returner critical point won count\n",
+      "1\n",
+      "setup_point\n",
+      "server critical point count\n",
+      "43\n",
+      "returner critical point count\n",
+      "23\n",
+      "server critical point won count\n",
+      "28\n",
+      "returner critical point won count\n",
+      "3\n",
+      "tb_setup_point\n",
+      "server critical point count\n",
+      "4\n",
+      "returner critical point count\n",
+      "2\n",
+      "server critical point won count\n",
+      "3\n",
+      "returner critical point won count\n",
+      "0\n",
+      "deuce_point\n",
+      "server critical point count\n",
+      "13\n",
+      "returner critical point count\n",
+      "8\n",
+      "server critical point won count\n",
+      "9\n",
+      "returner critical point won count\n",
+      "3\n"
      ]
     }
    ],
@@ -6279,7 +6411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
