--- a/Tennis_Analytics.ipynb
+++ b/Tennis_Analytics.ipynb
@@ -4675,7 +4675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -4689,118 +4689,135 @@
     }
    ],
    "source": [
-    "players = [\"player1\", \"player2\"]\n",
-    "num_shot_pattern = 50\n",
-    "min_freq = 4\n",
-    "shot_pattern_freq = []\n",
-    "shot_pattern_sets = [] \n",
+    "df_shot_pattern_freq = []\n",
     "\n",
     "print(points_in_match.loc[points_in_match.index[0], players])\n",
     "\n",
-    "for player in players:\n",
+    "for player in [\"player1\", \"player2\"]:\n",
     "    dict_freq = get_shot_pattern_freq(points_in_match[player+\"_shots_code\"].dropna())\n",
-    "    dict_freq = {}\n",
     "\n",
-    "    \n",
-    "    shot_pattern_freq.append(freq_sorted)\n",
-    "    shot_pattern_sets.append(freq_set)"
+    "    # Create a dataframe from a dictionary, with keys and values as two columns. \n",
+    "    df = pd.DataFrame(list(dict_freq.items()), \n",
+    "                      columns = [\"shot_pattern\", points_in_match.loc[points_in_match.index[0], player]])\n",
+    "    df_shot_pattern_freq.append(df)\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>shot_pattern</th>\n",
+       "      <th>novak_djokovic</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>f3w@,</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>f28,</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>b28,</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>f3,</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>f1,</td>\n",
+       "      <td>93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>548</th>\n",
+       "      <td>b;1,</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>549</th>\n",
+       "      <td>f38,b;1,</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>550</th>\n",
+       "      <td>b;1,b3,</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>551</th>\n",
+       "      <td>f38,b;1,b3,</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552</th>\n",
+       "      <td>b;1,b3,b3,</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>553 rows × 2 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "[(74, 's3,'),\n",
-       " (70, 'f1,'),\n",
-       " (70, 'b3,'),\n",
-       " (57, 'f3,'),\n",
-       " (49, 'f2,'),\n",
-       " (44, 'b2,'),\n",
-       " (23, 's2,'),\n",
-       " (21, 'f28,'),\n",
-       " (20, 's1,'),\n",
-       " (15, 's38,'),\n",
-       " (15, 's37,'),\n",
-       " (15, 's3,b3,'),\n",
-       " (15, 's28,'),\n",
-       " (15, 'f+3,'),\n",
-       " (13, 'b1,'),\n",
-       " (11, 'f38,'),\n",
-       " (11, 'f3*,'),\n",
-       " (11, 'f29,'),\n",
-       " (11, 'f2,s3,'),\n",
-       " (10, 'b3,f1,'),\n",
-       " (10, 'b3,b3,'),\n",
-       " (9, 's29,'),\n",
-       " (9, 's#,'),\n",
-       " (9, 'f1,s3,'),\n",
-       " (9, 'f1,f1,'),\n",
-       " (9, 'f1*,'),\n",
-       " (9, 'f+1,'),\n",
-       " (9, 'b3,f3,'),\n",
-       " (9, 'b28,'),\n",
-       " (8, 's3,b2,'),\n",
-       " (8, 'f3,s3,'),\n",
-       " (7, 's3n#,'),\n",
-       " (7, 'f2,f1,'),\n",
-       " (7, 'b2,f2,'),\n",
-       " (6, 'f3w@,'),\n",
-       " (6, 'f2n#,'),\n",
-       " (6, 'f28,s3,'),\n",
-       " (6, 'f2,b3,'),\n",
-       " (6, 'f1n@,'),\n",
-       " (6, 'f1,f2,'),\n",
-       " (6, 'b3w@,'),\n",
-       " (6, 'b3,f2,'),\n",
-       " (6, 'b2,f1,'),\n",
-       " (5, 'v1*,'),\n",
-       " (5, 'u+3,'),\n",
-       " (5, 's3,s3,'),\n",
-       " (5, 'f39,'),\n",
-       " (5, 'f3,f3,'),\n",
-       " (5, 'f3,b2,'),\n",
-       " (5, 'f2d#,'),\n",
-       " (5, 'f2,f3,'),\n",
-       " (5, 'f+2,'),\n",
-       " (5, 'b38,'),\n",
-       " (5, 'b1,f1,'),\n",
-       " (5, 'b1*,'),\n",
-       " (4, 's3,f1,'),\n",
-       " (4, 's3,b3,b3,'),\n",
-       " (4, 's27,'),\n",
-       " (4, 's2,f2,'),\n",
-       " (4, 's1,f1,'),\n",
-       " (4, 'r2,'),\n",
-       " (4, 'f3n@,'),\n",
-       " (4, 'f3d@,'),\n",
-       " (4, 'f38,s3,'),\n",
-       " (4, 'f3,s2,'),\n",
-       " (4, 'f27,'),\n",
-       " (4, 'f2,s3,b3,'),\n",
-       " (4, 'f2,b2,'),\n",
-       " (4, 'f1w@,'),\n",
-       " (4, 'f1n#,'),\n",
-       " (4, 'f18,'),\n",
-       " (4, 'f1,s2,'),\n",
-       " (4, 'f1,f1,s3,'),\n",
-       " (4, 'f!@,'),\n",
-       " (4, 'b3n@,'),\n",
-       " (4, 'b3,s3,'),\n",
-       " (4, 'b2d@,'),\n",
-       " (4, 'b2,s3,')]"
+       "    shot_pattern  novak_djokovic\n",
+       "0          f3w@,               5\n",
+       "1           f28,              23\n",
+       "2           b28,              10\n",
+       "3            f3,              62\n",
+       "4            f1,              93\n",
+       "..           ...             ...\n",
+       "548         b;1,               1\n",
+       "549     f38,b;1,               1\n",
+       "550      b;1,b3,               1\n",
+       "551  f38,b;1,b3,               1\n",
+       "552   b;1,b3,b3,               1\n",
+       "\n",
+       "[553 rows x 2 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "shot_pattern_sets[0]"
+    "df_shot_pattern_freq[1]"
    ]
   },
   {
